--- a/app_public/src/index.html
+++ b/app_public/src/index.html
@@ -19,6 +19,6 @@
   <script src="assets/javascripts/bootsrap.bunde.min.js"></script>
 </head>
 <body>
-  <app-home-list></app-home-list>
+  <app-framework></app-framework>
 </body>
 </html>
